setup graph class more

--- a/notebooks/routr1.ipynb
+++ b/notebooks/routr1.ipynb
@@ -15,18 +15,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "081558e8",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "import pyproj\n",
-    "print(pyproj.datadir.get_data_dir())"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "id": "69d57ddb",
    "metadata": {},
    "outputs": [],
@@ -55,7 +44,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "id": "fe8e40b4",
    "metadata": {},
    "outputs": [],
@@ -78,12 +67,18 @@
    "source": [
     "class CyclewayGraph:\n",
     "    \n",
-    "    def __init__(self, node_count, node_ids, cycleways, , ):"
+    "    def __init__(self, city, node_count, node_ids, cycleways, edge_count, edge_ids):\n",
+    "        self.id = city\n",
+    "        self.node_length = f\"node_count: {node_count}\"\n",
+    "        self.edge_length = f\"edge_count: {edge_count}\"\n",
+    "        self.node_ids = node_ids\n",
+    "        self.edge_ids = edge_ids\n",
+    "\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "id": "1d1cea6d",
    "metadata": {},
    "outputs": [],
@@ -93,7 +88,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "id": "e9bc6689",
    "metadata": {},
    "outputs": [],
@@ -103,7 +98,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "id": "e26c3b1c",
    "metadata": {},
    "outputs": [],
